--- a/results/charts/computerType_by_sizes.html
+++ b/results/charts/computerType_by_sizes.html
@@ -4,9 +4,9 @@ google.charts.setOnLoadCallback(drawTrendlines);
 function drawTrendlines() {
       var data = new google.visualization.DataTable();
 
-  data.addColumn('number', 'Website Size');data.addColumn('number', 'Desktop');data.addColumn('number', 'Rpi');data.addRows([[100000,1180.5860107421875,7546.572509765625],[500000,1221.9057983398438,8197.450073242188],[1000000,1314.4460205078126,8544.76220703125],[2000000,1528.4080078125,8822.212646484375],[4000000,2289.523974609375,9092.93994140625],[8000000,4297.972021484375,10210.43505859375]]);var options = {
+  data.addColumn('number', 'Website Size');data.addColumn('number', 'Desktop');data.addColumn('number', 'Rpi');data.addRows([[0.1,1180.5860107421875,7546.572509765625],[0.5,1221.9057983398438,8197.450073242188],[1,1314.4460205078126,8544.76220703125],[2,1528.4080078125,8822.212646484375],[4,2289.523974609375,9092.93994140625],[8,4297.972021484375,10210.43505859375]]);var options = {
         hAxis: {
-          title: 'Sizes(in Bytes)'
+          title: 'Sizes(in MB)'
         },
         vAxis: {
           title: 'OnLoad Time ms'
