Reran charts with manual resetadded

--- a/results/charts/wire_wireless.html
+++ b/results/charts/wire_wireless.html
@@ -1,6 +1,6 @@
 <html><head><title>HTTP2 Opimization</title></head>
 <body>
-<div id='control_div'><button style='marginRight:10px' onclick="changeView([0,1,2,3,4], '1 MB')">1 MB</button> <button style='marginRight:10px' onclick="changeView([0,5,6,7,8], '2 MB')">2 MB</button> <button style='marginRight:10px' onclick="changeView([0,9,10,11,12], '4 MB')">4 MB</button> <button style='marginRight:10px' onclick="changeView([0,1,2,5,6,9,10], 'Ethernet')">Ethernet</button> <button style='marginRight:10px' onclick="changeView([0,3,4,7,8,11,12], 'Wireless')">Wireless</button> <button style='marginRight:10px' onclick="changeView([0,1,2,3,4,5,6,7,8,9,10,11,12], 'All')">All</button> </div>
+<div id='control_div'><button style='margin-right:5px' onclick="changeView([0,1,2,3,4], '1 MB')">1 MB</button> <button style='margin-right:5px' onclick="changeView([0,5,6,7,8], '2 MB')">2 MB</button> <button style='margin-right:5px' onclick="changeView([0,9,10,11,12], '4 MB')">4 MB</button> <button style='margin-right:5px' onclick="changeView([0,1,2,5,6,9,10], 'Ethernet')">Ethernet</button> <button style='margin-right:5px' onclick="changeView([0,3,4,7,8,11,12], 'Wireless')">Wireless</button> <button style='margin-right:5px' onclick="changeView([0,1,2,3,4,5,6,7,8,9,10,11,12], 'All')">All</button> <button style='margin-right:5px; background-color: lightcoral;' onclick='changeView([0,1,2,3,4,5,6,7,8,9,10,11,12])'>Reset Chart</button> </div>
 <div id='chart_div'></div>
 </body>
 <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
